fixed scrollbar to appear only when needed

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-  overflow: scroll;
+  overflow: auto;
 }
 
 .drawing-branch {
